# tp-multithreading

./: LICENSE  QueueClient.py  QueueManager.py  README.md  boss.py  client.py  db.sqlite3  manager.py  minion.py  pyproject.toml  start.sh
.github/workflows/: ci.yml
high_level/: models.py  urls.py  views.py
high_level/migrations/: 0001_initial.py
low_level/: CMakeLists.txt  low_level.cpp
mysite/: settings.py  urls.py
src/: QueueClient.py  QueueManager.py  boss.py  minion.py  proxy.py  task.py  test_task.py  test_task_2.py
